# da_t1

./: .gitignore  CMakeLists.txt  README.html  README.md  main.cpp  mainTest.cpp
Tests/: tests.cpp
codigo/: main.cpp
codigo/include/: Objects.h  OptimizeProfit.h  read_files.h  timer.h
codigo/src/: express_deliveries.cpp  knapsack.cpp  menu.cpp  read_files.cpp  timer.cpp
data/c_0/: c_0.txt
data/c_1/: c1.txt  c10.txt  c11.txt  c12.txt  c13.txt  c14.txt  c15.txt  c16.txt  c17.txt  c18.txt  c19.txt  c2.txt  c20.txt  c21.txt  c22.txt  c23.txt  c24.txt  c25.txt  c26.txt  c27.txt  c28.txt  c29.txt  c3.txt  c30.txt  c31.txt  c32.txt  c33.txt  c34.txt  c35.txt  c36.txt  c37.txt  c38.txt  c39.txt  c4.txt  c40.txt  c41.txt  c42.txt  c43.txt  c44.txt  c45.txt  (+61 more)
data/c_10/: c1.txt  c2.txt  c3.txt  c4.txt  c5.txt  c_1.txt  c_10.txt  c_11.txt  c_12.txt  c_13.txt  c_14.txt  c_15.txt  c_16.txt  c_17.txt  c_18.txt  c_19.txt  c_2.txt  c_20.txt  c_3.txt  c_4.txt  c_5.txt  c_6.txt  c_7.txt  c_8.txt  c_9.txt
data/c_100/: c_1.txt  c_10.txt  c_11.txt  c_12.txt  c_13.txt  c_14.txt  c_2.txt  c_3.txt  c_4.txt  c_5.txt  c_6.txt  c_7.txt  c_8.txt  c_9.txt
data/c_2/: c1.txt  c10.txt  c11.txt  c12.txt  c13.txt  c14.txt  c15.txt  c16.txt  c17.txt  c18.txt  c19.txt  c2.txt  c20.txt  c21.txt  c22.txt  c23.txt  c24.txt  c25.txt  c3.txt  c4.txt  c5.txt  c6.txt  c7.txt  c8.txt  c9.txt  c_1.txt  c_10.txt  c_11.txt  c_12.txt  c_13.txt  c_14.txt  c_15.txt  c_16.txt  c_17.txt  c_18.txt  c_19.txt  c_2.txt  c_20.txt  c_21.txt  c_22.txt  (+11 more)
data/c_25/: c1.txt  c2.txt  c_1.txt  c_10.txt  c_11.txt  c_12.txt  c_13.txt  c_14.txt  c_15.txt  c_16.txt  c_17.txt  c_18.txt  c_19.txt  c_2.txt  c_20.txt  c_3.txt  c_4.txt  c_5.txt  c_6.txt  c_7.txt  c_8.txt  c_9.txt
data/c_5/: c1.txt  c10.txt  c2.txt  c3.txt  c4.txt  c5.txt  c6.txt  c7.txt  c8.txt  c9.txt  c_1.txt  c_10.txt  c_2.txt  c_3.txt  c_4.txt  c_5.txt  c_6.txt  c_7.txt  c_8.txt  c_9.txt
data/c_50/: c_1.txt  c_10.txt  c_11.txt  c_12.txt  c_13.txt  c_14.txt  c_15.txt  c_16.txt  (+12 more)
documentacao/: _memento_8h_source.html  _optimize_profit_8h_source.html  class_knapsack.html  express__deliveries_8h_source.html  functions.html  functions_func.html  index.html  knapsack_8h_source.html  struct_order.html  struct_state-members.html  struct_truck-members.html
html/: _optimize_number_of_deliveries_8h_source.html  class_knapsack-members.html  class_memento-members.html  class_memento.html  class_menu-members.html  class_optimize_number_of_deliveries.html  class_optimize_profit-members.html  class_timer-members.html
include/: Memento.h  Objects.h  OptimizeNumberOfDeliveries.h  OptimizeProfit.h  OptmizeProfit.h  cen3.h  express_deliveries.h  knapsack.h  menu.h  read_files.h  timer.h
report/: t_16.txt
src/: Memento.cpp  OptimizeNumberOfDeliveries.cpp  OptimizeProfit.cpp  OptmizeProfit.cpp  cen3.cpp  express_deliveries.cpp  knapsack.cpp  menu.cpp  read_files.cpp  timer.cpp
(+19964 files in other folders)
